# tiny_rust_projects

./: .gitignore  LICENSE  README.md
cat-rs/: Cargo.toml  README.md
cat-rs/src/: lib.rs  main.rs
cat-rs/tests/: cli.rs
coin-rs/: Cargo.toml  README.md
coin-rs/src/: main.rs
echo-rs/: Cargo.toml  README.md
echo-rs/src/: main.rs
echo-rs/tests/: cli.rs
json_to_csv/: Cargo.toml  README.md
json_to_csv/src/: main.rs
minigrep/: README.md
minigrep/src/: lib.rs  main.rs
rabbit-rs/: Cargo.toml  README.md
rabbit-rs/src/: main.rs
