[package]
name = "coin-rs"
version = "0.1.0"
edition = "2021"
authors = ["Otávio Guerra <github.com/otaviomguerra>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.2.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"